<resources>
    <string name="app_name">FirebaseTestApp</string>
    <string name="press_to_exit">Press again to exit from app</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="submit">Submit</string>
    <string name="please_wait">Please Wait..</string>
    <string name="login_success">Login Success</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="data_added">Data added to DB</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_age">Please enter age</string>
    <string name="add_details">Add Details</string>
    <string name="view_details">View Details</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_age_validation">Please enter age less than 100</string>
</resources>