<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="clickHandle"
            type="com.firebasetestapp.utils.HandleClick" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTIL"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:padding="@dimen/_15sdp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            android:hint="@string/age">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ageET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:padding="@dimen/_15sdp" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitBT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="@{(view) -> clickHandle.clickHandle(view)}"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/detailsBT"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_15sdp"
                android:layout_weight="1"
                android:background="@drawable/button_background"
                android:onClick="@{(view) -> clickHandle.clickHandle(view)}"
                android:text="@string/view_details"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14ssp" />


        </LinearLayout>
    </LinearLayout>
</layout>